logs/mobi.rendering.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Chameleon-3.2.egg-info'...
Listing './lib/python3.5/site-packages/chameleon'...
Listing './lib/python3.5/site-packages/chameleon/tests'...
Listing './lib/python3.5/site-packages/chameleon/tests/inputs'...
Listing './lib/python3.5/site-packages/chameleon/tests/outputs'...
Listing './lib/python3.5/site-packages/chameleon/zpt'...
Listing './lib/python3.5/site-packages/mobi'...
Listing './lib/python3.5/site-packages/mobi/caching'...
Compiling './lib/python3.5/site-packages/mobi/caching/backend.py'...
***   File "./lib/python3.5/site-packages/mobi/caching/backend.py", line 11
    raise KeyError, 'no cache'
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mobi/interfaces'...
Listing './lib/python3.5/site-packages/mobi/rendering'...
Compiling './lib/python3.5/site-packages/mobi/rendering/expressions.py'...
***   File "./lib/python3.5/site-packages/mobi/rendering/expressions.py", line 29
    raise TypeError, 'invalid field name %s' % field_name
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mobi.caching-1.0.egg-info'...
Listing './lib/python3.5/site-packages/mobi.interfaces-1.0.egg-info'...
Listing './lib/python3.5/site-packages/mobi.rendering-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
